force-app/main/default/objects/Lead/fields/Country_Alpha2__c.field-meta.xml
<CustomField>
    <fullName>Country_Alpha2__c</fullName>
    <label>Country Alpha2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>