force-app/main/default/objects/Lead/fields/Country_Alpha3__c.field-meta.xml
<CustomField>
    <fullName>Country_Alpha3__c</fullName>
    <label>Country Alpha3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>