force-app/main/default/objects/Lead/validationRules/Prevent_LeadOwner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_LeadOwner_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(OwnerId),
  OR(
    ISBLANK(Country),
    ISBLANK(TEXT(LeadSource)),
    AND(
      $Profile.Name &lt;&gt; &quot;Contract Manager&quot;,
      ISBLANK(NumberOfEmployees)
    )
  ),
  NOT(
    OR(
      $Profile.Name = &quot;System Administrator&quot;,
      AND(
        $Profile.Name = &quot;Contract Manager&quot;,
        NOT(ISBLANK(Country))
      )
    )
  )
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Cannot change the Lead Owner.</errorMessage>
</ValidationRule>